[gd_scene load_steps=22 format=3 uid="uid://bmmyuuicpd76f"]

[ext_resource type="Script" path="res://scripts/rocket_moving.gd" id="1_7rncf"]
[ext_resource type="Texture2D" uid="uid://dnyqs7dy10ey4" path="res://assets/bahan/star/collect1.png" id="2_ejqjq"]
[ext_resource type="PackedScene" uid="uid://drpd4kwwkrjvs" path="res://scenes/attack_ufo.tscn" id="2_y8d8e"]
[ext_resource type="Texture2D" uid="uid://cv7yavax2desh" path="res://assets/bahan/star/collect2.png" id="3_lepbw"]
[ext_resource type="Texture2D" uid="uid://ccsd5bbpd0nki" path="res://assets/bahan/star/collect3.png" id="4_v8eco"]
[ext_resource type="Texture2D" uid="uid://dtu444xoty4cd" path="res://assets/bahan/star/collect4.png" id="5_oudah"]
[ext_resource type="Texture2D" uid="uid://btorg28pjdh02" path="res://assets/bahan/star/collect5.png" id="6_vps4e"]
[ext_resource type="Texture2D" uid="uid://boam0dg2yj0tc" path="res://assets/bahan/star/collect6.png" id="7_v3wsd"]
[ext_resource type="Texture2D" uid="uid://cpuq56jufkwlv" path="res://assets/bahan/star/collect7.png" id="8_1kdyo"]
[ext_resource type="Texture2D" uid="uid://sugmlhgtt1y2" path="res://assets/bahan/star/collect8.png" id="9_dmfum"]
[ext_resource type="Texture2D" uid="uid://dqukbfjc1jv8d" path="res://assets/bahan/star/collect9.png" id="10_vlwuh"]
[ext_resource type="Texture2D" uid="uid://q0fyw33vyete" path="res://assets/bahan/star/collect10.png" id="11_cljhs"]
[ext_resource type="Texture2D" uid="uid://cr2bw0nj7xwt4" path="res://assets/bahan/star/collect11.png" id="12_jby3p"]
[ext_resource type="Texture2D" uid="uid://cxxuxekccg2h" path="res://assets/bahan/star/collect12.png" id="13_cb0vv"]
[ext_resource type="Texture2D" uid="uid://c457mh71flnqw" path="res://assets/bahan/star/collect13.png" id="14_ksi27"]
[ext_resource type="Texture2D" uid="uid://cnqqrhh0unsm0" path="res://assets/bahan/star/collect14.png" id="15_pjajm"]
[ext_resource type="Texture2D" uid="uid://c7cu065v13ju2" path="res://assets/bahan/star/collect15.png" id="16_v0kmv"]
[ext_resource type="Texture2D" uid="uid://ic7invddrbfc" path="res://assets/bahan/star/collect16.png" id="17_awyyt"]
[ext_resource type="Texture2D" uid="uid://bfvnynf6k72nv" path="res://assets/bahan/shield/rocket with bubble.png" id="18_24j1y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wepi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ejqjq")
}, {
"duration": 1.0,
"texture": ExtResource("3_lepbw")
}, {
"duration": 1.0,
"texture": ExtResource("4_v8eco")
}, {
"duration": 1.0,
"texture": ExtResource("5_oudah")
}, {
"duration": 1.0,
"texture": ExtResource("6_vps4e")
}, {
"duration": 1.0,
"texture": ExtResource("7_v3wsd")
}, {
"duration": 1.0,
"texture": ExtResource("8_1kdyo")
}, {
"duration": 1.0,
"texture": ExtResource("9_dmfum")
}, {
"duration": 1.0,
"texture": ExtResource("10_vlwuh")
}, {
"duration": 1.0,
"texture": ExtResource("11_cljhs")
}, {
"duration": 1.0,
"texture": ExtResource("12_jby3p")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb0vv")
}, {
"duration": 1.0,
"texture": ExtResource("14_ksi27")
}, {
"duration": 1.0,
"texture": ExtResource("15_pjajm")
}, {
"duration": 1.0,
"texture": ExtResource("16_v0kmv")
}, {
"duration": 1.0,
"texture": ExtResource("17_awyyt")
}],
"loop": false,
"name": &"collect",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_24j1y")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6p5p"]
radius = 24.0

[node name="rocket" type="Area2D"]
script = ExtResource("1_7rncf")
attack_ufo_scene = ExtResource("2_y8d8e")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.269807, 0.269807)
sprite_frames = SubResource("SpriteFrames_wepi0")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x6p5p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
